Updating pipeline: ADF_MODELO_ORACLE_CLEASING_DATA

--- a/pipeline/ADF_MODELO_ORACLE_CLEASING_DATA.json
+++ b/pipeline/ADF_MODELO_ORACLE_CLEASING_DATA.json
@@ -743,7 +743,13 @@
 								},
 								"dataset": {
 									"referenceName": "SQL_DS_DW_MALWEE",
-									"type": "DatasetReference"
+									"type": "DatasetReference",
+									"parameters": {
+										"NomeTabela": {
+											"value": "pipeline().parameters.ParNomeTabelaOrigem",
+											"type": "Expression"
+										}
+									}
 								}
 							}
 						}
