--- a/pipeline/ADF_MODELO_ORACLE_CLEASING_DATA.json
+++ b/pipeline/ADF_MODELO_ORACLE_CLEASING_DATA.json
@@ -307,7 +307,7 @@
 							"type": "Copy",
 							"dependsOn": [
 								{
-									"activity": "Limpa Tabela Destino_I",
+									"activity": "Insere na tabela Cleansing I",
 									"dependencyConditions": [
 										"Succeeded"
 									]
@@ -752,6 +752,79 @@
 									}
 								}
 							}
+						},
+						{
+							"name": "Insere na tabela Cleansing I",
+							"type": "Copy",
+							"dependsOn": [
+								{
+									"activity": "Limpa Tabela Destino_I",
+									"dependencyConditions": [
+										"Succeeded"
+									]
+								}
+							],
+							"policy": {
+								"timeout": "7.00:00:00",
+								"retry": 0,
+								"retryIntervalInSeconds": 30,
+								"secureOutput": false,
+								"secureInput": false
+							},
+							"userProperties": [],
+							"typeProperties": {
+								"source": {
+									"type": "OracleSource",
+									"oracleReaderQuery": {
+										"value": "@concat(\n'select ',\nactivity('LeDataProcessamento').output.firstRow.DSC_COLUNAS_NAO_SENSIVEIS,\n' from ',\npipeline().parameters.ParNomeSchemaOrigem,\nif(equals(pipeline().parameters.ParNomeSchemaOrigem,''),'','.'),\npipeline().parameters.ParNomeTabelaOrigem,\n' where ',\nactivity('LeDataProcessamento').output.firstRow.NOM_COLUNA_REFERENCIA,\n' >= TO_TIMESTAMP(',\n'''',activity('LeDataProcessamento').output.firstRow.DAT_INGESTAO_CIGAM,'''',',',\n'''','DD-MON-YYYY HH24: MI:SS:FF','''',')',\n' and ',\nactivity('LeDataProcessamento').output.firstRow.NOM_COLUNA_REFERENCIA,\n' <= TO_TIMESTAMP(',\n'''',\nactivity('LeDataProcessamento').output.firstRow.DAT_PROCESSAMENTO_CIGAM,\n'''',\n',',\n'''',\n'DD-MON-YYYY HH24: MI:SS:FF',\n'''',\n');'\n)",
+										"type": "Expression"
+									},
+									"partitionOption": "None",
+									"queryTimeout": "02:00:00"
+								},
+								"sink": {
+									"type": "AzureSqlSink"
+								},
+								"enableStaging": false,
+								"translator": {
+									"type": "TabularTranslator",
+									"typeConversion": true,
+									"typeConversionSettings": {
+										"allowDataTruncation": true,
+										"treatBooleanAsNumber": false
+									}
+								}
+							},
+							"inputs": [
+								{
+									"referenceName": "OracleTable1",
+									"type": "DatasetReference",
+									"parameters": {
+										"NomeTabela": "TABELA",
+										"UserName": "@activity('LeCredenciaisDBorigem').output.firstRow.NOM_USUARIO",
+										"SecretNamePWD": {
+											"value": "@activity('LeCredenciaisDBorigem').output.firstRow.DESC_SECRET_PWD",
+											"type": "Expression"
+										},
+										"SecretNameCON": {
+											"value": "@activity('LeCredenciaisDBorigem').output.firstRow.DESC_SECRET_CON",
+											"type": "Expression"
+										}
+									}
+								}
+							],
+							"outputs": [
+								{
+									"referenceName": "SQL_DS_DW_MALWEE",
+									"type": "DatasetReference",
+									"parameters": {
+										"NomeTabela": {
+											"value": "@concat(pipeline().parameters.ParNomeSchemaDestino,pipeline().parameters.ParNomeTabelaDestino)",
+											"type": "Expression"
+										}
+									}
+								}
+							]
 						}
 					]
 				}
